--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CCA Libraries implementation of Open Library Bookreader",
   "main": "index.html",
   "scripts": {
-    "demo": "python -c 'import SimpleHTTPServer; SimpleHTTPServer.test();' & sleep 2; open 'http://localhost:8000/?title=Double%20Readings&id=d79ea3fb-6d87-4003-9b40-9b322dcd87fc&version=1&filenames=page&pages=9'",
+    "demo": "python -c 'import SimpleHTTPServer; SimpleHTTPServer.test();' & sleep 2; open 'http://localhost:8000/?title=Five%20by%20seven%20for%20Yvon%20Lambert%20%3A%20nine%20works%20%2F%20by%20Richard%20Tuttle.&id=553c0faf-f895-4277-8d45-126922d74e4d&version=1&filenames=page&pages=7'",
+    "deploy": "rsync -avz --exclude-from exclude.txt . libraries.cca.edu:~/libraries.cca.edu/bookreader",
     "test": "grunt test"
   },
   "repository": {
