--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CCA Libraries implementation of Open Library Bookreader",
   "main": "index.html",
   "scripts": {
-    "demo": "python -c 'import SimpleHTTPServer; SimpleHTTPServer.test();' & sleep 2; open 'http://localhost:8000/?title=Five%20by%20seven%20for%20Yvon%20Lambert%20%3A%20nine%20works%20%2F%20by%20Richard%20Tuttle.&id=553c0faf-f895-4277-8d45-126922d74e4d&version=1&filenames=page&pages=7'",
+    "demo": "http-server & sleep 2 & open 'http://localhost:8080/?title=Five%20by%20seven%20for%20Yvon%20Lambert%20%3A%20nine%20works%20%2F%20by%20Richard%20Tuttle.&id=553c0faf-f895-4277-8d45-126922d74e4d&version=1&filenames=page&pages=7#page/1/mode/2up'",
     "deploy": "rsync --archive --compress --verbose --delete --exclude-from exclude.txt dist/ libraries.cca.edu:~/libraries.cca.edu/bookreader",
     "test": "grunt test"
   },
@@ -19,21 +19,22 @@
     "artist's books"
   ],
   "author": "phette23 <phette23@gmail.com> (http://phette.net)",
-  "license": "Apache 2.0",
+  "license": "ECL-2.0",
   "bugs": {
     "url": "https://github.com/cca/libraries_bookreader/issues"
   },
   "homepage": "https://github.com/cca/libraries_bookreader#readme",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-open": "^0.2.3",
     "grunt-usemin": "^3.1.1",
+    "http-server": "^0.9.0",
     "load-grunt-tasks": "^3.2.0"
   }
 }
