--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-open": "^0.2.3",
+    "grunt-sass": "^3.0.1",
     "grunt-usemin": "^3.1.1",
     "http-server": "^0.11.1",
-    "load-grunt-tasks": "^4.0.0"
+    "load-grunt-tasks": "^4.0.0",
+    "node-sass": "^4.9.3"
   }
 }
